# aula06_bootcamp

./: .flake8  .pre-commit-config.yaml  main.py  pyproject.toml  tempCodeRunnerFile.py
