[project]
name = "aula006"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduarda Andrade",email = "andrasi.eduarda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""
